# gethired

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
knowledge_base/: data_science.yaml  finance.yaml  software_engineering.yaml
mcp_servers/linkedin/: scraper.py  server.py
services/agents/: classifier.py  evaluator.py  gap_analyser.py  graph.py  persona.py  prep_graph.py  retriever.py  roadmap.py  state.py
services/api/: config.py  main.py
services/api/routers/: ingest.py  interview.py
services/api/schemas/: profile.py
services/ingestion/: embedder.py  linkedin_fetcher.py  resume_parser.py
tests/: test_evaluator.py  test_gap_analyser.py  test_interview.py  test_retriever.py  test_roadmap.py
